kubernetes/apps/default/homepage/app/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage-worker
        app.kubernetes.io/part-of: homepage
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: worker
          image: ghcr.io/nu-sync/homepage:main-00000025-2a3d587 # {"$imagepolicy": "default:homepage"}
          imagePullPolicy: IfNotPresent
          command:
            - deno
            - run
            - --cached-only
            - --allow-env
            - --allow-read
            - --allow-net
            - --allow-ffi
            - --allow-sys
            - src/server/temporal/worker.ts
          resources:
            requests:
              cpu: 50m
              memory: 320Mi
            limits:
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
