kubernetes/apps/default/homepage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "${SECRET_DOMAIN_THREE}"
    - "www.${SECRET_DOMAIN_THREE}"
  rules:
    - backendRefs:
        - name: homepage
          port: 80
